# JOB-20260704130000-000131

./: .env.example  .gitignore  .shipped  Dockerfile  OUT_OF_SCOPE.md  README.md  pyproject.toml  requirements.txt
fixtures/sample_lovable_repo/: .env  package.json
fixtures/sample_lovable_repo/app/: page.tsx
fixtures/sample_lovable_repo/app/api/things/: route.ts
lovable_audit/: __init__.py  architecture_checks.py  cli.py  report.py  risk_patterns.py  security_checks.py  test_coverage.py
next_demo/: package.json
next_demo/app/: page.tsx
next_demo/app/api/chat/: route.ts
next_demo/app/whatsapp-demo/: page.tsx
scripts/: run_audit.sh  verify_stack.py
templates/: handoff_doc_template.md  production_readiness_checklist.md  risk_register.md
tests/: __init__.py  conftest.py  test_cli.py  test_report.py  test_risk_patterns.py  test_security_checks.py
