[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lovable-audit"
version = "0.1.0"
description = "Static audit scaffold for Next.js + Supabase + Lovable-style SaaS apps."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Software Factory" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
lovable-audit = "lovable_audit.cli:main"

[tool.setuptools]
packages = ["lovable_audit"]
include-package-data = true

[tool.setuptools.package-data]
lovable_audit = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["lovable_audit"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
